# snuffbox-mantis

./: .gitignore  CMakeLists.txt  README.md  gen_linux.sh  gen_win32.cmd
cmake/: FindDirectX.cmake  FindEASTL.cmake  FindGLFWSource.cmake  FindGLM.cmake  FindGLSLang.cmake  FindSpirVCross.cmake  FindV8.cmake
snuffbox-builder/: CMakeLists.txt  main.cc
snuffbox-builder/application/: application.cc  application.h  builder.cc  builder.h
snuffbox-builder/forms/: main_window.cpp  main_window.h  snuffbox_builder.fbp
snuffbox-builder/platform/: platform_directory_lister.h  platform_folder_enumerator.h
snuffbox-builder/threads/: build_thread.cc  build_thread.h  worker_thread.cc  worker_thread.h
snuffbox-builder/utils/: build_graph.cc  build_graph.h  linux_directory_lister.cc  linux_directory_lister.h  linux_folder_enumerator.h  win32_directory_lister.cc  win32_directory_lister.h  win32_folder_enumerator.h
snuffbox-compilers/: CMakeLists.txt
snuffbox-compilers/compilers/: compiler.cc  compiler.h  script_compiler.cc  script_compiler.h  shader_compiler.cc  shader_compiler.h
snuffbox-compilers/utils/: glslang_validator.cc  glslang_validator.h  magic.h  rc4.cc  rc4.h
snuffbox-console/: CMakeLists.txt  defines.h  main.cc  wx_defines.h
snuffbox-console/application/: application.cc  application.h  console.cc  console.h
snuffbox-console/forms/: main_window.cpp  main_window.h  snuffbox_console.fbp
snuffbox-console/logging/: logging.h
snuffbox-engine/: CMakeLists.txt
snuffbox-engine/application/: application.cc  application.h
snuffbox-engine/core/: eastl.h  timer.cc  timer.h  window.cc  window.h
snuffbox-engine/input/: buttons.cc  buttons.h  controller.cc  controller.h  input.cc  input.h  key_queue.cc  key_queue.h  keyboard.cc  keyboard.h  keycodes.cc  keycodes.h  mouse.cc  mouse.h
snuffbox-engine/io/: content.cc  content.h  content_manager.cc  content_manager.h  file.cc  file.h  file_watch.cc  file_watch.h  script.cc  script.h  shader.cc  shader.h
snuffbox-engine/js/: js_allocator.cc  js_allocator.h  js_callback.h  js_defines.h  js_function_register.cc  js_function_register.h  js_object.cc  js_object.h  js_object_register.cc  js_object_register.h  js_state_wrapper.cc  js_state_wrapper.h  js_wrapper.cc  js_wrapper.h
snuffbox-engine/logging/: cvar.cc  cvar.h  cvar_value.cc  cvar_value.h  log.cc  log.h  log_client.cc  log_client.h  logger.cc  logger.h  logger_client.cc  logger_client.h
snuffbox-engine/memory/: allocator.cc  allocator.h  allocators.h  eastl_allocator.cc  eastl_allocator.h  malloc_allocator.cc  malloc_allocator.h  memory.cc  memory.h
snuffbox-engine/services/: content_service.cc  content_service.h  cvar_service.cc  cvar_service.h  input_service.cc  input_service.h  log_service.cc  log_service.h  service.h  services.cc  services.h  window_service.cc  window_service.h
snuffbox-graphics/: CMakeLists.txt
snuffbox-graphics/platform/: platform_display_device.h  platform_renderer.cc  platform_renderer.h
snuffbox-graphics/vulkan/: vulkan_display_device.cc  vulkan_display_device.h  vulkan_physical_device.cc  vulkan_physical_device.h  vulkan_shader.cc  vulkan_shader.h  vulkan_swap_chain.cc  vulkan_swap_chain.h  vulkan_validation_layer.cc  vulkan_validation_layer.h
snuffbox-javascript/: CMakeLists.txt  main.cc  v8_args.x64.debug.gn  v8_args.x64.release.gn  v8_linux_steps.txt
snuffbox-javascript/gn/: x64.debug.linux.gn  x64.release.linux.gn
snuffbox-logging/: CMakeLists.txt  logging_stream.cc  logging_stream.h
snuffbox-logging/connection/: logging_client.cc  logging_client.h  logging_server.cc  logging_server.h  logging_socket.cc  logging_socket.h  logging_wrapper.h  wrapper.h
snuffbox-logging/win32/: winsock_wrapper.cc  winsock_wrapper.h
snuffbox-test/: CMakeLists.txt  app.cc  app.h  main.cc
