FILE(GLOB_RECURSE SNUFF_BUILDER_ROOT
	"*.cc"
	"*.h"
)

FILE(GLOB_RECURSE SNUFF_BUILDER_FORMS
	"forms/*.cpp"
	"forms/*.h"
)

FILE(GLOB_RECURSE SNUFF_BUILDER_APPLICATION
	"application/*.cc"
	"application/*.h"
)

SET(SNUFF_BUILDER_SOURCES
	${SNUFF_BUILDER_ROOT}
	${SNUFF_BUILDER_FORMS}
	${SNUFF_BUILDER_APPLICATION}
)

SOURCE_GROUP("\\" FILES ${SNUFF_BUILDER_ROOT})
SOURCE_GROUP("forms" FILES ${SNUFF_BUILDER_FORMS})
SOURCE_GROUP("application" FILES ${SNUFF_BUILDER_APPLICATION})

ADD_EXECUTABLE(snuffbox-builder ${SNUFF_BUILDER_SOURCES})
TARGET_LINK_LIBRARIES(snuffbox-builder ${wxWidgets_LIBRARIES})

IF (WIN32)
	SET_TARGET_PROPERTIES(snuffbox-builder PROPERTIES LINK_FLAGS "/SUBSYSTEM:WINDOWS")
ENDIF ()
