FILE (GLOB_RECURSE SNUFF_COMPILERS_UTILS_SOURCES
	"utils/*.cc"
	"utils/*.h"
)

FILE (GLOB_RECURSE SNUFF_COMPILERS_COMPILERS_SOURCES
	"compilers/*.cc"
	"compilers/*.h"
)

SET (SNUFF_COMPILERS_SOURCES
	${SNUFF_COMPILERS_UTILS_SOURCES}
	${SNUFF_COMPILERS_COMPILERS_SOURCES}
)

SOURCE_GROUP("utils" FILES ${SNUFF_COMPILERS_UTILS_SOURCES})
SOURCE_GROUP("compilers" FILES ${SNUFF_COMPILERS_COMPILERS_SOURCES})

ADD_LIBRARY(snuffbox-compilers ${SNUFF_COMPILERS_SOURCES})