FILE (GLOB SNUFF_COMPILERS_UTILS
	"utils/*.cc"
	"utils/*.h"
)

FILE (GLOB SNUFF_COMPILERS_COMPILERS
	"compilers/*.cc"
	"compilers/*.h"
)

SET (SNUFF_COMPILERS_SOURCES
	${SNUFF_COMPILERS_UTILS}
	${SNUFF_COMPILERS_COMPILERS}
)

SOURCE_GROUP("utils" FILES ${SNUFF_COMPILERS_UTILS})
SOURCE_GROUP("compilers" FILES ${SNUFF_COMPILERS_COMPILERS})

ADD_LIBRARY(snuffbox-compilers ${SNUFF_COMPILERS_SOURCES})