FILE(GLOB SNUFF_CONSOLE_ROOT
	"*.cc"
	"*.h"
)

SET (SNUFF_CONSOLE_ROOT ${SNUFF_CONSOLE_ROOT} "../wx_defines.h")

FILE(GLOB SNUFF_CONSOLE_FORMS
	"forms/*.cpp"
	"forms/*.h"
)

FILE(GLOB SNUFF_CONSOLE_APPLICATION
	"application/*.cc"
	"application/*.h"
)

FILE(GLOB SNUFF_CONSOLE_LOGGING
	"logging/*.cc"
	"logging/*.h"
)

SOURCE_GROUP("\\" FILES ${SNUFF_CONSOLE_ROOT})
SOURCE_GROUP("forms" FILES ${SNUFF_CONSOLE_FORMS})
SOURCE_GROUP("application" FILES ${SNUFF_CONSOLE_APPLICATION})
SOURCE_GROUP("logging" FILES ${SNUFF_CONSOLE_LOGGING})

SET(SNUFF_CONSOLE_SOURCES
	${SNUFF_CONSOLE_ROOT}
	${SNUFF_CONSOLE_FORMS}
	${SNUFF_CONSOLE_APPLICATION}
	${SNUFF_CONSOLE_LOGGING}
)

ADD_EXECUTABLE(snuffbox-console ${SNUFF_CONSOLE_SOURCES})
TARGET_LINK_LIBRARIES(snuffbox-console snuffbox-logging)
TARGET_LINK_LIBRARIES(snuffbox-console ${wxWidgets_LIBRARIES})

IF (WIN32)
	SET_TARGET_PROPERTIES(snuffbox-console PROPERTIES LINK_FLAGS "/SUBSYSTEM:WINDOWS")
ENDIF ()
