SET(SNUFF_GRAPHICS_PREFIX "ogl")

IF (WIN32 AND NOT SNUFF_USE_OGL)
	MESSAGE(STATUS "Using DirectX ${SNUFF_DIRECTX_VERSION} graphics device")
	SET(SNUFF_GRAPHICS_PREFIX "d3d${SNUFF_DIRECTX_VERSION}")
ELSEIF (CMAKE_SYSTEM_NAME MATCHES "Linux" OR SNUFF_USE_OGL)
	MESSAGE(STATUS "Using ${SNUFF_OGL_VERSION} graphics device")
	SET(SNUFF_GRAPHICS_PREFIX "${SNUFF_OGL_VERSION}")
ENDIF ()

FILE(GLOB_RECURSE SNUFF_ENGINE_GRAPHICS
	"graphics/${SNUFF_GRAPHICS_PREFIX}/*.cc"
	"graphics/${SNUFF_GRAPHICS_PREFIX}/*.h"
)

FILE(GLOB_RECURSE SNUFF_ENGINE_MEMORY
	"memory/*.cc"
	"memory/*.h"
)

SET(SNUFF_ENGINE_SOURCES
	${SNUFF_ENGINE_GRAPHICS}
	${SNUFF_ENGINE_MEMORY}
)

SOURCE_GROUP("graphics\\${SNUFF_GRAPHICS_PREFIX}" FILES ${SNUFF_ENGINE_GRAPHICS})
SOURCE_GROUP("memory" FILES ${SNUFF_ENGINE_MEMORY})

ADD_LIBRARY(snuffbox-engine ${SNUFF_ENGINE_SOURCES})
TARGET_LINK_LIBRARIES(snuffbox-engine EASTL)