SET(SNUFF_GRAPHICS_PREFIX "ogl")

IF (WIN32 AND NOT SNUFF_USE_OGL)
	MESSAGE(STATUS "Using DirectX ${SNUFF_DIRECTX_VERSION} graphics device")
	SET(SNUFF_GRAPHICS_PREFIX "d3d${SNUFF_DIRECTX_VERSION}")
ELSEIF (CMAKE_SYSTEM_NAME MATCHES "Linux" OR SNUFF_USE_OGL)
	MESSAGE(STATUS "Using ${SNUFF_OGL_VERSION} graphics device")
	SET(SNUFF_GRAPHICS_PREFIX "${SNUFF_OGL_VERSION}")
ENDIF ()

FILE(GLOB SNUFF_GRAPHICS_SOURCES
	"${SNUFF_GRAPHICS_PREFIX}/*.cc"
	"${SNUFF_GRAPHICS_PREFIX}/*.h"
)

IF (NOT SNUFF_USE_OGL AND WIN32)
	FIND_PACKAGE(DirectX REQUIRED)

	SET(D3D_PREFIX "DirectX_D3D${SNUFF_DIRECTX_VERSION}")
	INCLUDE_DIRECTORIES(${${D3D_PREFIX}_INCLUDE_DIR})
	SET(GRAPHICS_LIBRARIES ${${D3D_PREFIX}_LIBRARIES})
ENDIF ()

SOURCE_GROUP("${SNUFF_GRAPHICS_PREFIX}" FILES ${SNUFF_GRAPHICS_SOURCES})

ADD_LIBRARY(snuffbox-graphics ${SNUFF_GRAPHICS_SOURCES})
TARGET_LINK_LIBRARIES(snuffbox-graphics ${GRAPHICS_LIBRARIES})