SET(SNUFF_GRAPHICS_PREFIX "ogl")

IF (WIN32 AND NOT SNUFF_USE_OGL)
	MESSAGE(STATUS "Using DirectX ${SNUFF_DIRECTX_VERSION} graphics device")
	SET(SNUFF_GRAPHICS_PREFIX "d3d${SNUFF_DIRECTX_VERSION}")
ELSEIF (CMAKE_SYSTEM_NAME MATCHES "Linux" OR SNUFF_USE_OGL)
	MESSAGE(STATUS "Using ${SNUFF_OGL_VERSION} graphics device")
	SET(SNUFF_GRAPHICS_PREFIX "${SNUFF_OGL_VERSION}")
ENDIF ()

FILE(GLOB SNUFF_GRAPHICS_SOURCES
	"${SNUFF_GRAPHICS_PREFIX}/*.cc"
	"${SNUFF_GRAPHICS_PREFIX}/*.h"
)

IF (NOT SNUFF_USE_OGL AND WIN32)
	FIND_PACKAGE(DirectX REQUIRED)

	SET(D3D_PREFIX "DirectX_D3D${SNUFF_DIRECTX_VERSION}")
	SET(GRAPHICS_INCLUDES ${${D3D_PREFIX}_INCLUDES})
	SET(GRAPHICS_LIBRARIES ${${D3D_PREFIX}_LIBRARIES})
ENDIF ()

IF (SNUFF_USE_OGL AND SNUFF_GRAPHICS_PREFIX MATCHES "vulkan")
	FIND_PACKAGE(Vulkan REQUIRED)

	SET(GRAPHICS_INCLUDES ${Vulkan_INCLUDE_DIRS})
	SET(GRAPHICS_LIBRARIES ${Vulkan_LIBRARIES})
ENDIF ()

SOURCE_GROUP("${SNUFF_GRAPHICS_PREFIX}" FILES ${SNUFF_GRAPHICS_SOURCES})

ADD_LIBRARY(snuffbox-graphics ${SNUFF_GRAPHICS_SOURCES})
TARGET_INCLUDE_DIRECTORIES(snuffbox-graphics PUBLIC ${GRAPHICS_INCLUDES})
TARGET_LINK_LIBRARIES(snuffbox-graphics ${GRAPHICS_LIBRARIES})