FILE(GLOB_RECURSE SNUFF_TEST_MAIN
	"*.cc"
)

SET(SNUFF_TEST_SOURCES
	${SNUFF_TEST_MAIN}
)

SOURCE_GROUP("\\" FILES ${SNUFF_TEST_MAIN})

ADD_EXECUTABLE(snuffbox-test ${SNUFF_TEST_SOURCES})

TARGET_LINK_LIBRARIES(snuffbox-test snuffbox-engine)
SET_TARGET_PROPERTIES(snuffbox-test PROPERTIES LINKER_LANGUAGE CXX)